cmake_minimum_required(VERSION 3.14)
project(CppDemo)

set(CMAKE_CXX_STANDARD 14)
aux_source_directory(. main_dir)
add_subdirectory(virtual)
add_subdirectory(c5)
add_subdirectory(mem)
add_executable(dianwo ${main_dir})
target_link_libraries(dianwo virtual_lib)
target_link_libraries(dianwo c5_lib)
target_link_libraries(dianwo mem_lib)